# tahecho

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  IMPROVED_ERROR_HANDLING_SUMMARY.md  INTERACTION_TESTS_SUMMARY.md  LANGCHAIN_MIGRATION.md  LICENSE  Readme.md  THIRD_PARTY_LICENSES.md  agent.py  app.py  app_minimal.py  cache.py  chainlit.md  chainlit_de-DE.md  config.py  config.toml  demo_modes.py  docker-compose.yml  hugo.toml  intent_handler.py  jira_client.py  openai_client.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_guide.md  test_basic_components.py  test_jira_config.py  test_langchain_implementation.py  test_setup.py  tools.py
.chainlit/: config.toml
agent_tools/: create_jira_issue_tool.py  generate_jql_query_tool.py  get_issues_by_jql_tool.py  get_jira_issues_tool.py
agents/: graph_agent.py  jira_issues_agent.py  jql_query_agent.py  langchain_graph_agent.py  langchain_manager_agent.py  langchain_mcp_agent.py  langgraph_workflow.py  manager_agent.py  mcp_agent.py  state.py  task_classifier.py
content/: _index.md
docs/: ENGINEIO_ERROR_HANDLING.md  EVALUATION_DATASET_GUIDE.md  FACTUAL_QUESTIONS_ADMINISTRATIVE_EXPANSION.md  LANGCHAIN_MIGRATION.md  LANGCHAIN_TRACING_MIGRATION.md  LOCAL_DEVELOPMENT.md  PGA_UNIFIED_DATASET_SUMMARY.md  PUBLIC_SECTOR_EVALUATION_SETUP.md  SBOM_COMPLIANCE.md  SITEMAP_USAGE.md  TDD_CYCLE_SUMMARY.md  USE_CASE_EVALUATION_FRAMEWORK.md  index.html  index.md  sitemap.xml
jira_integration/: jira_client.py
layouts/: index.html
models/: anthropic_model.py  openai_model.py
public/: 404.html  index.html  index.json  index.xml  sbom.json  sbom.xml  sitemap.xml  styles.css  theme.json
scripts/: __init__.py  clean_license_data.py  comprehensive_sbom.py  create_jira_eval_dataset.py  create_public_sector_eval_dataset.py  create_use_case_datasets.py  demo_sitemap.py  demo_sitemap_mock.py  enhance_sbom_licenses.py  fix_rls_policies.sql  fix_source_tracking.py  generate_administrative_factual_questions.py  generate_sbom.py  integrate_administrative_questions.py  manage_sitemaps.py  merge_pga_datasets.py  run_jira_evaluation.py  run_public_sector_evaluation.py  setup_mcp_jira.py  setup_supabase.py  supabase_schema.sql  test_database.py  test_env.py  test_jira_agent.py  (+4 more)
(+141 files in other folders)
