[tool.poetry]
name = "tohecho"
version = "0.1.0"
description = ""
authors = ["Wolfgang Ihloff"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
chainlit = "^1.3.2"
python-dotenv = "^1.0.1"
openai = "^1.58.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
